# galvanic

./: .gitignore  Cargo.toml  README.md  goal.md
.github/workflows/: ci.yml
.lathe/: agent.md  alignment-summary.md  ambition.md  brand.md  builder.md  changelog-cycle-1.md  claims.md  falsify.sh  goal.md  snapshot.sh  verifier.md
.lathe/agents/: builder.md  champion.md  verifier.md
.lathe/refs/: fls-constraints.md  fls-pointer.md
.lathe/session/: changelog.md  goal-cycle-027.md  goal-cycle-028.md
.lathe/skills/: architecture.md  domains.md  journeys.md  platform-and-abi.md  testing.md
benches/: throughput.rs
refs/: arm64-abi.md  arm64-platform-abi.md  fls-ambiguities.md  fls-constraints.md
src/: ast.rs  codegen.rs  ir.rs  lexer.rs  lib.rs  lower.rs  main.rs  parser.rs
tests/: e2e.rs  fls_fixtures.rs  smoke.rs
tests/fixtures/: fls_10_2_assoc_type_bounds.rs  fls_10_2_assoc_type_bounds.s  fls_10_2_assoc_types.rs  fls_10_2_assoc_types.s  fls_10_2_where_clause_proj.rs  fls_10_2_where_clause_proj.s  fls_10_3_assoc_consts.rs  fls_10_3_assoc_consts.s  fls_11_impl_trait.rs  fls_11_impl_trait.s  fls_12_1_generic_enums.rs  fls_12_1_generic_enums.s  fls_12_1_generic_fns.rs  fls_12_1_generic_fns.s  fls_12_1_generic_impl.rs  fls_12_1_generic_impl.s  fls_12_1_generic_methods.rs  fls_12_1_generic_methods.s  fls_12_1_generic_structs.rs  fls_12_1_generic_structs.s  fls_12_1_generic_trait_impl.rs  fls_12_1_trait_bounds.rs  fls_12_1_trait_bounds.s  fls_13_traits.rs  fls_13_traits.s  fls_19_unsafe_fn.rs  fls_19_unsafe_fn.s  fls_19_unsafe_trait.rs  fls_19_unsafe_trait.s  (+66 more)
(+30 files in other folders)
