[package]
name = "galvanic"
version = "0.1.0"
edition = "2024"
description = "Clean-room ARM64 Rust compiler built from the Ferrocene Language Specification with cache-line-aware codegen"
license = "MIT"

[dependencies]

[dev-dependencies]
tempfile = "3"

[[bench]]
name = "throughput"
harness = false

[dev-dependencies.criterion]
version = "0.5"
features = ["html_reports"]
